--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,132 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body {margin:0;}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #2C2F33;
+  border: 15px;
+  border-color: #7289DA;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-a {
-  color: #00B7FF;
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #7289DA;
+}
+
+h1 {
+  text-align: center;
+  font-family: Arial;
+  margin-top: 0px;
+}
+
+#error {
+  color: red;
+}
+
+body {
+  text-align: center;
+  color: #ffffff;
+  background: #2C2F33;
+  font-family: Arial;
+}
+
+form {
+  display: inline-block;
+  background: #393d41;
+  border: 1px solid #393d41;
+  border-radius: 10px;
+  padding: 25px;
+  margin-top: 75px;
+}
+
+button {
+  background-color: #7289DA;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 8px 26px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: #565eaa;
+}
+
+input[type=username], select {
+  font-size: 13px;
+  padding: 4px 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=password], select {
+  font-size: 13px;
+  padding: 4px 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=email], select {
+  font-size: 13px;
+  padding: 4px 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=text], select {
+  font-size: 13px;
+  padding: 4px 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+  margin-left: 250px;
+  margin-right: 250px;
+}
+
+.grid-item {
+  background-color: #787878;
+  border-radius: 5px;
+  padding: 30px;
+  margin: 10px;
+  font-size: 30px;
+  color: #111111;
+  text-align: center;
 }
